# dsesh

./: .gitignore  Cargo.toml  README.md  flake.nix
doc/: dsesh.1
src/: lib.rs  main.rs
tests/: e2e-retained-screen.sh
