# SPDX-FileCopyrightText: 2026 midischwarz12
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "dsesh"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A small detachable session runner with retained terminal screen state"
repository = "https://github.com/midischwarz12/dsesh"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.28.1"
portable-pty = "0.8.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
signal-hook = "0.3.17"
tempfile = "3.10.1"
vt100 = "0.15.2"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
