# SPDX-FileCopyrightText: 2026 midischwarz12
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "dsesh"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A small detachable session runner with retained terminal screen state"
repository = "https://github.com/midischwarz12/dsesh"

[dependencies]
anyhow = "1.0.86"
libc = "0.2.186"
vt100 = "0.15.2"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
